--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
 			}
 
 			.earth {
+				-webkit-transform: translate3d(0, 0, 0);
 				background-image: url(assets/img/planets/earth/earth_geography_1k.jpg);
+			}
+			.atmosphere {
+				-webkit-transform: translate3d(0, 0, 1px);
+				background-image: url(assets/img/planets/earth/earth_atmosphere_1k.png);
 			}
 
 			@-moz-keyframes rotate360 {
@@ -43,6 +48,12 @@
 				animation: rotate360 60s linear infinite;
 			}
 
+			.rotating-inner {
+				-webkit-animation: rotate360 100s linear infinite;
+				-moz-animation: rotate360 100s linear infinite;
+				animation: rotate360 100s linear infinite;
+			}
+
 		</style>
 
 	</head>
@@ -55,7 +66,8 @@
 		<div id="main">
 			<scene id="first">
 				<camera id="main-cam" class="perspective" data-fov="30" data-far="4000"></camera>
-				<sphere class="earth rotating" data-radius="200" data-segments="40" data-rings="30"></sphere>
+				<sphere class="earth rotating-inner" data-radius="200" data-segments="40" data-rings="30"></sphere>
+				<sphere class="atmosphere rotating" data-radius="205" data-segments="40" data-rings="30"></sphere>
 			</scene>
 		</div>
 
