:zzz: solar-system tag

--- a/examples/index.html
+++ b/examples/index.html
@@ -68,8 +68,10 @@
 				<camera id="main-cam" class="perspective" data-fov="30" data-far="4000"></camera>
 				<sphere class="earth rotating-inner" data-radius="200" data-segments="40" data-rings="30"></sphere>
 				<sphere class="atmosphere rotating" data-radius="205" data-segments="40" data-rings="30"></sphere>
+				<solar-system scale="0.0001"></solar-system>
 			</scene>
 		</div>
+
 
 		<!-- deps -->
 		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
